@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2014, 2021, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2014, 2022, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -32,6 +32,18 @@
  * @run testng/othervm --add-exports=java.base/jdk.internal.misc=ALL-UNNAMED --add-exports=jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED ClassLoaderStatsTest
  */
 
+/*
+ * @test
+ * @summary Test of diagnostic command VM.classloader_stats (-UseCCP)
+ * @library /test/lib
+ * @requires vm.bits != "32"
+ * @modules java.base/jdk.internal.misc
+ *          java.compiler
+ *          java.management
+ *          jdk.internal.jvmstat/sun.jvmstat.monitor
+ * @run testng/othervm -XX:-UseCompressedClassPointers --add-exports=java.base/jdk.internal.misc=ALL-UNNAMED --add-exports=jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED ClassLoaderStatsTest
+ */
+
 import org.testng.annotations.Test;
 import org.testng.Assert;
 
@@ -62,7 +74,6 @@ public class ClassLoaderStatsTest {
     //                                                                  1       256       131   + hidden classes
     // 0x0000000000000000  0x0000000000000000  0x00007f00e852d190    1607   4628480   3931216  <boot class loader>
     //                                                                 38    124928     85856   + hidden classes
-    // 0x00000008003b5508  0x0000000000000000  0x00007f001c2d4760       1      6144      4040  jdk.internal.reflect.DelegatingClassLoader
     // 0x000000080037f468  0x000000080037ee80  0x00007f00e868e3f0     228   1368064   1286672  jdk.internal.loader.ClassLoaders$AppClassLoader
     // ...
 
@@ -81,6 +92,7 @@ public class ClassLoaderStatsTest {
         }
 
         OutputAnalyzer output = executor.execute("VM.classloader_stats");
+        output.reportDiagnosticSummary();
         Iterator<String> lines = output.asLines().iterator();
         while (lines.hasNext()) {
             String line = lines.next();
@@ -92,8 +104,20 @@ public class ClassLoaderStatsTest {
                     if (!m.group(1).equals("1")) {
                         Assert.fail("Should have loaded 1 class: " + line);
                     }
-                    checkPositiveInt(m.group(2));
-                    checkPositiveInt(m.group(3));
+
+                    long capacityBytes = Long.parseLong(m.group(2)); // aka "Chunksz"
+                    long usedBytes = Long.parseLong(m.group(3)); // aka "Blocksz"
+
+                    // Minimum expected sizes: initial capacity is governed by the chunk size of the first chunk, which
+                    // depends on the arena growth policy. Since this is a normal class loader, we expect as initial chunk
+                    // size at least 4k (if UseCompressedClassPointers is off).
+                    // Minimum used size is difficult to guess but should be at least 1k.
+                    // Maximum expected sizes: We just assume a reasonable maximum. We only loaded one class, so
+                    // we should not see values > 64k.
+                    long K = 1024;
+                    if (capacityBytes < (K * 4) || usedBytes < K || capacityBytes > (64 * K) || usedBytes > (64 * K)) {
+                        throw new RuntimeException("Sizes seem off. Chunksz: " + capacityBytes + ", Blocksz: " + usedBytes);
+                    }
 
                     String next = lines.next();
                     System.out.println("DummyClassLoader next: " + next);
@@ -172,12 +196,13 @@ class HiddenClass { }
 class TestClass {
     private static final String HCName = "HiddenClass.class";
     private static final String DIR = System.getProperty("test.classes");
+    public static final Class<?> hc;
 
     static {
         try {
-            // Create a hidden non-strong class
+            // Create a hidden non-strong class, keep reference in the case if GC happens
             byte[] klassBuf = readClassFile(DIR + File.separator + HCName);
-            Class<?> hc = defineHiddenClass(klassBuf);
+            hc = defineHiddenClass(klassBuf);
         } catch (Throwable e) {
             throw new RuntimeException("Unexpected exception in TestClass: " + e.getMessage());
         }
