@@ -1,5 +1,5 @@
 /*
- *  Copyright (c) 2021, Oracle and/or its affiliates. All rights reserved.
+ *  Copyright (c) 2021, 2022, Oracle and/or its affiliates. All rights reserved.
  *  DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  *  This code is free software; you can redistribute it and/or modify it
@@ -23,62 +23,180 @@
 
 /*
  * @test
- * @requires ((os.arch == "amd64" | os.arch == "x86_64") & sun.arch.data.model == "64") | os.arch == "aarch64"
+ * @enablePreview
+ * @requires ((os.arch == "amd64" | os.arch == "x86_64") & sun.arch.data.model == "64") | os.arch == "aarch64" | os.arch == "riscv64"
  * @run testng/othervm --enable-native-access=ALL-UNNAMED SafeFunctionAccessTest
  */
 
-import jdk.incubator.foreign.CLinker;
-import jdk.incubator.foreign.FunctionDescriptor;
-import jdk.incubator.foreign.SymbolLookup;
-import jdk.incubator.foreign.MemoryAddress;
-import jdk.incubator.foreign.MemoryLayout;
-import jdk.incubator.foreign.MemorySegment;
-import jdk.incubator.foreign.ResourceScope;
+import java.lang.foreign.Arena;
+import java.lang.foreign.Linker;
+import java.lang.foreign.FunctionDescriptor;
+import java.lang.foreign.MemorySegment;
+import java.lang.foreign.MemoryLayout;
 
+import java.lang.foreign.SegmentScope;
 import java.lang.invoke.MethodHandle;
+import java.lang.invoke.MethodHandles;
 import java.lang.invoke.MethodType;
 
+import java.lang.foreign.VaList;
+import java.util.stream.Stream;
+
 import org.testng.annotations.*;
+
 import static org.testng.Assert.*;
 
-public class SafeFunctionAccessTest {
+public class SafeFunctionAccessTest extends NativeTestHelper {
     static {
         System.loadLibrary("SafeAccess");
     }
 
     static MemoryLayout POINT = MemoryLayout.structLayout(
-            CLinker.C_INT, CLinker.C_INT
+            C_INT, C_INT
     );
-
-    static final SymbolLookup LOOKUP = SymbolLookup.loaderLookup();
 
     @Test(expectedExceptions = IllegalStateException.class)
     public void testClosedStruct() throws Throwable {
         MemorySegment segment;
-        try (ResourceScope scope = ResourceScope.newConfinedScope()) {
-            segment = MemorySegment.allocateNative(POINT, scope);
+        try (Arena arena = Arena.openConfined()) {
+            segment = arena.allocate(POINT);
         }
         assertFalse(segment.scope().isAlive());
-        MethodHandle handle = CLinker.getInstance().downcallHandle(
-                LOOKUP.lookup("struct_func").get(),
-                MethodType.methodType(void.class, MemorySegment.class),
+        MethodHandle handle = Linker.nativeLinker().downcallHandle(
+                findNativeOrThrow("struct_func"),
                 FunctionDescriptor.ofVoid(POINT));
 
         handle.invokeExact(segment);
     }
 
-    @Test(expectedExceptions = IllegalStateException.class)
-    public void testClosedPointer() throws Throwable {
-        MemoryAddress address;
-        try (ResourceScope scope = ResourceScope.newConfinedScope()) {
-            address = MemorySegment.allocateNative(POINT, scope).address();
+    @Test
+    public void testClosedStructAddr_6() throws Throwable {
+        MethodHandle handle = Linker.nativeLinker().downcallHandle(
+                findNativeOrThrow("addr_func_6"),
+                FunctionDescriptor.ofVoid(C_POINTER, C_POINTER, C_POINTER, C_POINTER, C_POINTER, C_POINTER));
+        record Allocation(Arena drop, MemorySegment segment) {
+            static Allocation of(MemoryLayout layout) {
+                Arena arena = Arena.openShared();
+                return new Allocation(arena, arena.allocate(layout));
+            }
         }
-        assertFalse(address.scope().isAlive());
-        MethodHandle handle = CLinker.getInstance().downcallHandle(
-                LOOKUP.lookup("addr_func").get(),
-                MethodType.methodType(void.class, MemoryAddress.class),
-                FunctionDescriptor.ofVoid(CLinker.C_POINTER));
+        for (int i = 0 ; i < 6 ; i++) {
+            Allocation[] allocations = new Allocation[]{
+                    Allocation.of(POINT),
+                    Allocation.of(POINT),
+                    Allocation.of(POINT),
+                    Allocation.of(POINT),
+                    Allocation.of(POINT),
+                    Allocation.of(POINT)
+            };
+            // check liveness
+            allocations[i].drop().close();
+            for (int j = 0 ; j < 6 ; j++) {
+                if (i == j) {
+                    assertFalse(allocations[j].drop().scope().isAlive());
+                } else {
+                    assertTrue(allocations[j].drop().scope().isAlive());
+                }
+            }
+            try {
+                handle.invokeWithArguments(Stream.of(allocations).map(Allocation::segment).toArray());
+                fail();
+            } catch (IllegalStateException ex) {
+                assertTrue(ex.getMessage().contains("Already closed"));
+            }
+            for (int j = 0 ; j < 6 ; j++) {
+                if (i != j) {
+                    allocations[j].drop().close(); // should succeed!
+                }
+            }
+        }
+    }
 
-        handle.invokeExact(address);
+    @Test(expectedExceptions = IllegalStateException.class)
+    public void testClosedVaList() throws Throwable {
+        VaList list;
+        try (Arena arena = Arena.openConfined()) {
+            list = VaList.make(b -> b.addVarg(C_INT, 42), arena.scope());
+        }
+        assertFalse(list.segment().scope().isAlive());
+        MethodHandle handle = Linker.nativeLinker().downcallHandle(
+                findNativeOrThrow("addr_func"),
+                FunctionDescriptor.ofVoid(C_POINTER));
+
+        handle.invokeExact(list.segment());
+    }
+
+    @Test(expectedExceptions = IllegalStateException.class)
+    public void testClosedUpcall() throws Throwable {
+        MemorySegment upcall;
+        try (Arena arena = Arena.openConfined()) {
+            MethodHandle dummy = MethodHandles.lookup().findStatic(SafeFunctionAccessTest.class, "dummy", MethodType.methodType(void.class));
+            upcall = Linker.nativeLinker().upcallStub(dummy, FunctionDescriptor.ofVoid(), arena.scope());
+        }
+        assertFalse(upcall.scope().isAlive());
+        MethodHandle handle = Linker.nativeLinker().downcallHandle(
+                findNativeOrThrow("addr_func"),
+                FunctionDescriptor.ofVoid(C_POINTER));
+
+        handle.invokeExact(upcall);
+    }
+
+    static void dummy() { }
+
+    @Test
+    public void testClosedVaListCallback() throws Throwable {
+        MethodHandle handle = Linker.nativeLinker().downcallHandle(
+                findNativeOrThrow("addr_func_cb"),
+                FunctionDescriptor.ofVoid(C_POINTER, C_POINTER));
+
+        try (Arena arena = Arena.openConfined()) {
+            VaList list = VaList.make(b -> b.addVarg(C_INT, 42), arena.scope());
+            handle.invokeExact(list.segment(), sessionChecker(arena));
+        }
+    }
+
+    @Test
+    public void testClosedStructCallback() throws Throwable {
+        MethodHandle handle = Linker.nativeLinker().downcallHandle(
+                findNativeOrThrow("addr_func_cb"),
+                FunctionDescriptor.ofVoid(C_POINTER, C_POINTER));
+
+        try (Arena arena = Arena.openConfined()) {
+            MemorySegment segment = arena.allocate(POINT);
+            handle.invokeExact(segment, sessionChecker(arena));
+        }
+    }
+
+    @Test
+    public void testClosedUpcallCallback() throws Throwable {
+        MethodHandle handle = Linker.nativeLinker().downcallHandle(
+                findNativeOrThrow("addr_func_cb"),
+                FunctionDescriptor.ofVoid(C_POINTER, C_POINTER));
+
+        try (Arena arena = Arena.openConfined()) {
+            MethodHandle dummy = MethodHandles.lookup().findStatic(SafeFunctionAccessTest.class, "dummy", MethodType.methodType(void.class));
+            MemorySegment upcall = Linker.nativeLinker().upcallStub(dummy, FunctionDescriptor.ofVoid(), arena.scope());
+            handle.invokeExact(upcall, sessionChecker(arena));
+        }
+    }
+
+    MemorySegment sessionChecker(Arena arena) {
+        try {
+            MethodHandle handle = MethodHandles.lookup().findStatic(SafeFunctionAccessTest.class, "checkSession",
+                    MethodType.methodType(void.class, Arena.class));
+            handle = handle.bindTo(arena);
+            return Linker.nativeLinker().upcallStub(handle, FunctionDescriptor.ofVoid(), SegmentScope.auto());
+        } catch (Throwable ex) {
+            throw new AssertionError(ex);
+        }
+    }
+
+    static void checkSession(Arena arena) {
+        try {
+            arena.close();
+            fail("Session closed unexpectedly!");
+        } catch (IllegalStateException ex) {
+            assertTrue(ex.getMessage().contains("acquired")); //if acquired, fine
+        }
     }
 }
