@@ -1,5 +1,5 @@
 /*
- *  Copyright (c) 2020, Oracle and/or its affiliates. All rights reserved.
+ *  Copyright (c) 2020, 2022, Oracle and/or its affiliates. All rights reserved.
  *  DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  *  This code is free software; you can redistribute it and/or modify it
@@ -24,28 +24,25 @@
 
 /*
  * @test
- * @requires ((os.arch == "amd64" | os.arch == "x86_64") & sun.arch.data.model == "64") | os.arch == "aarch64"
- * @run testng TestFunctionDescriptor
+ * @enablePreview
+ * @requires ((os.arch == "amd64" | os.arch == "x86_64") & sun.arch.data.model == "64") | os.arch == "aarch64" | os.arch == "riscv64"
+ * @run testng/othervm --enable-native-access=ALL-UNNAMED TestFunctionDescriptor
  */
 
-import jdk.incubator.foreign.FunctionDescriptor;
-import jdk.incubator.foreign.MemoryLayout;
-import org.testng.annotations.Test;
-
-import java.lang.constant.Constable;
+import java.lang.foreign.FunctionDescriptor;
+import java.lang.foreign.MemoryLayout;
+import java.lang.foreign.MemorySegment;
+import java.lang.invoke.MethodType;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
+import org.testng.annotations.Test;
 
-import static jdk.incubator.foreign.CLinker.C_DOUBLE;
-import static jdk.incubator.foreign.CLinker.C_INT;
-import static jdk.incubator.foreign.CLinker.C_LONG_LONG;
-import static jdk.incubator.foreign.CLinker.C_POINTER;
 import static org.testng.Assert.assertEquals;
 import static org.testng.Assert.assertFalse;
+import static org.testng.Assert.assertNotEquals;
 import static org.testng.Assert.assertTrue;
 
-public class TestFunctionDescriptor {
+public class TestFunctionDescriptor extends NativeTestHelper {
 
     static final String DUMMY_ATTR = "dummy";
 
@@ -69,55 +66,59 @@ public class TestFunctionDescriptor {
     }
 
     @Test
-    public void testAttribute() {
-        FunctionDescriptor fd = FunctionDescriptor.of(C_INT, C_DOUBLE, C_LONG_LONG);
-        fd = fd.withAttribute(DUMMY_ATTR, true);
-
-        assertEquals(fd.argumentLayouts(), List.of(C_DOUBLE, C_LONG_LONG));
-        Optional<MemoryLayout> returnLayoutOp = fd.returnLayout();
-        assertTrue(returnLayoutOp.isPresent());
-        assertEquals(returnLayoutOp.get(), C_INT);
-        assertEquals(fd.attributes().collect(Collectors.toList()), List.of(DUMMY_ATTR));
-        Optional<Constable> attr = fd.attribute(DUMMY_ATTR);
-        assertTrue(attr.isPresent());
-        assertEquals(attr.get(), true);
-    }
-
-    @Test
     public void testAppendArgumentLayouts() {
-        FunctionDescriptor fd = FunctionDescriptor.of(C_INT, C_DOUBLE, C_LONG_LONG)
-                                                  .withAttribute(DUMMY_ATTR, true);
-        fd = fd.withAppendedArgumentLayouts(C_POINTER);
+        FunctionDescriptor fd = FunctionDescriptor.of(C_INT, C_DOUBLE, C_LONG_LONG);
+        fd = fd.appendArgumentLayouts(C_POINTER);
 
         assertEquals(fd.argumentLayouts(), List.of(C_DOUBLE, C_LONG_LONG, C_POINTER));
         Optional<MemoryLayout> returnLayoutOp = fd.returnLayout();
         assertTrue(returnLayoutOp.isPresent());
         assertEquals(returnLayoutOp.get(), C_INT);
-        assertEquals(fd.attributes().collect(Collectors.toList()), List.of(DUMMY_ATTR));
     }
 
     @Test
     public void testChangeReturnLayout() {
-        FunctionDescriptor fd = FunctionDescriptor.of(C_INT, C_DOUBLE, C_LONG_LONG)
-                                                  .withAttribute(DUMMY_ATTR, true);
-        fd = fd.withReturnLayout(C_INT);
+        FunctionDescriptor fd = FunctionDescriptor.of(C_INT, C_DOUBLE, C_LONG_LONG);
+        fd = fd.changeReturnLayout(C_INT);
 
         assertEquals(fd.argumentLayouts(), List.of(C_DOUBLE, C_LONG_LONG));
         Optional<MemoryLayout> returnLayoutOp = fd.returnLayout();
         assertTrue(returnLayoutOp.isPresent());
         assertEquals(returnLayoutOp.get(), C_INT);
-        assertEquals(fd.attributes().collect(Collectors.toList()), List.of(DUMMY_ATTR));
     }
 
     @Test
     public void testDropReturnLayout() {
-        FunctionDescriptor fd = FunctionDescriptor.of(C_INT, C_DOUBLE, C_LONG_LONG)
-                                                  .withAttribute(DUMMY_ATTR, true);
-        fd = fd.withVoidReturnLayout();
+        FunctionDescriptor fd = FunctionDescriptor.of(C_INT, C_DOUBLE, C_LONG_LONG);
+        fd = fd.dropReturnLayout();
 
         assertEquals(fd.argumentLayouts(), List.of(C_DOUBLE, C_LONG_LONG));
         Optional<MemoryLayout> returnLayoutOp = fd.returnLayout();
         assertFalse(returnLayoutOp.isPresent());
-        assertEquals(fd.attributes().collect(Collectors.toList()), List.of(DUMMY_ATTR));
+    }
+
+    @Test
+    public void testEquals() {
+        FunctionDescriptor fd = FunctionDescriptor.of(C_INT, C_INT, C_INT);
+        assertEquals(fd, fd);
+    }
+
+    @Test
+    public void testCarrierMethodType() {
+        FunctionDescriptor fd = FunctionDescriptor.of(C_INT,
+                C_INT,
+                MemoryLayout.structLayout(C_INT, C_INT));
+        MethodType cmt = fd.toMethodType();
+        assertEquals(cmt, MethodType.methodType(int.class, int.class, MemorySegment.class));
+    }
+
+    @Test(expectedExceptions = IllegalArgumentException.class)
+    public void testBadCarrierMethodType() {
+        FunctionDescriptor fd = FunctionDescriptor.of(C_INT,
+                C_INT,
+                MemoryLayout.structLayout(C_INT, C_INT),
+                MemoryLayout.sequenceLayout(3, C_INT),
+                MemoryLayout.paddingLayout(32));
+        fd.toMethodType(); // should throw
     }
 }
