@@ -1,5 +1,5 @@
 /*
- *  Copyright (c) 2020, 2021, Oracle and/or its affiliates. All rights reserved.
+ *  Copyright (c) 2020, 2022, Oracle and/or its affiliates. All rights reserved.
  *  DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  *  This code is free software; you can redistribute it and/or modify it
@@ -23,41 +23,37 @@
 
 /*
  * @test
- * @requires os.arch=="amd64" | os.arch=="x86_64" | os.arch=="aarch64"
+ * @enablePreview
+ * @requires os.arch=="amd64" | os.arch=="x86_64" | os.arch=="aarch64" | os.arch=="riscv64"
  * @run testng/othervm
  *   -Djdk.internal.foreign.ProgrammableInvoker.USE_SPEC=true
- *   -Djdk.internal.foreign.ProgrammableInvoker.USE_INTRINSICS=true
  *   --enable-native-access=ALL-UNNAMED
  *   -Xbatch
  *   TestIntrinsics
  */
 
-import jdk.incubator.foreign.CLinker;
-import jdk.incubator.foreign.FunctionDescriptor;
+import java.lang.foreign.Linker;
+import java.lang.foreign.FunctionDescriptor;
 
+import java.lang.foreign.MemorySegment;
 import java.lang.invoke.MethodHandle;
-import java.lang.invoke.MethodType;
 import java.util.ArrayList;
 import java.util.List;
 
-import jdk.incubator.foreign.MemoryAddress;
-import jdk.incubator.foreign.MemoryLayout;
-import jdk.incubator.foreign.SymbolLookup;
+import java.lang.foreign.MemoryLayout;
 import org.testng.annotations.*;
 
+import static java.lang.foreign.Linker.Option.firstVariadicArg;
 import static java.lang.invoke.MethodType.methodType;
-import static jdk.incubator.foreign.CLinker.*;
-import static jdk.incubator.foreign.FunctionDescriptor.TRIVIAL_ATTRIBUTE_NAME;
+import static java.lang.foreign.ValueLayout.JAVA_CHAR;
 import static org.testng.Assert.assertEquals;
 
-public class TestIntrinsics {
+public class TestIntrinsics extends NativeTestHelper {
 
-    static final CLinker abi = CLinker.getInstance();
+    static final Linker abi = Linker.nativeLinker();
     static {
         System.loadLibrary("Intrinsics");
     }
-
-    static final SymbolLookup LOOKUP = SymbolLookup.loaderLookup();
 
     private interface RunnableX {
         void run() throws Throwable;
@@ -88,52 +84,43 @@ public class TestIntrinsics {
         }
 
         AddIdentity addIdentity = (name, carrier, layout, arg) -> {
-            MemoryAddress ma = LOOKUP.lookup(name).get();
-            MethodType mt = methodType(carrier, carrier);
+            MemorySegment ma = findNativeOrThrow(name);
             FunctionDescriptor fd = FunctionDescriptor.of(layout, layout);
 
-            tests.add(abi.downcallHandle(ma, mt, fd), arg, arg);
-            tests.add(abi.downcallHandle(ma, mt, fd.withAttribute(TRIVIAL_ATTRIBUTE_NAME, true)), arg, arg);
-            tests.add(abi.downcallHandle(mt, fd), arg, ma, arg);
+            tests.add(abi.downcallHandle(ma, fd), arg, arg);
+            tests.add(abi.downcallHandle(fd), arg, ma, arg);
         };
 
         { // empty
-            MemoryAddress ma = LOOKUP.lookup("empty").get();
-            MethodType mt = methodType(void.class);
+            MemorySegment ma = findNativeOrThrow("empty");
             FunctionDescriptor fd = FunctionDescriptor.ofVoid();
-            tests.add(abi.downcallHandle(ma, mt, fd), null);
-            tests.add(abi.downcallHandle(ma, mt, fd.withAttribute(TRIVIAL_ATTRIBUTE_NAME, true)), null);
+            tests.add(abi.downcallHandle(ma, fd), null);
         }
 
-        addIdentity.add("identity_char",   byte.class,   C_CHAR,   (byte) 10);
-        addIdentity.add("identity_short",  short.class,  C_SHORT, (short) 10);
-        addIdentity.add("identity_int",    int.class,    C_INT,           10);
-        addIdentity.add("identity_long",   long.class,   C_LONG_LONG,     10L);
-        addIdentity.add("identity_float",  float.class,  C_FLOAT,         10F);
-        addIdentity.add("identity_double", double.class, C_DOUBLE,        10D);
+        addIdentity.add("identity_bool",   boolean.class, C_BOOL,   true);
+        addIdentity.add("identity_char",   byte.class,    C_CHAR,   (byte) 10);
+        addIdentity.add("identity_short",  short.class,   C_SHORT, (short) 10);
+        addIdentity.add("identity_int",    int.class,     C_INT,           10);
+        addIdentity.add("identity_long",   long.class,    C_LONG_LONG,     10L);
+        addIdentity.add("identity_float",  float.class,   C_FLOAT,         10F);
+        addIdentity.add("identity_double", double.class,  C_DOUBLE,        10D);
 
         { // identity_va
-            MemoryAddress ma = LOOKUP.lookup("identity_va").get();
-            MethodType mt = methodType(int.class, int.class, double.class, int.class, float.class, long.class);
-            FunctionDescriptor fd = FunctionDescriptor.of(C_INT, C_INT, asVarArg(C_DOUBLE),
-                    asVarArg(C_INT), asVarArg(C_FLOAT), asVarArg(C_LONG_LONG));
-            tests.add(abi.downcallHandle(ma, mt, fd), 1, 1, 10D, 2, 3F, 4L);
-            tests.add(abi.downcallHandle(ma, mt, fd.withAttribute(TRIVIAL_ATTRIBUTE_NAME, true)), 1, 1, 10D, 2, 3F, 4L);
+            MemorySegment ma = findNativeOrThrow("identity_va");
+            FunctionDescriptor fd = FunctionDescriptor.of(C_INT, C_INT,
+                                                                 C_DOUBLE, C_INT, C_FLOAT, C_LONG_LONG);
+            tests.add(abi.downcallHandle(ma, fd, firstVariadicArg(1)), 1, 1, 10D, 2, 3F, 4L);
         }
 
         { // high_arity
-            MethodType baseMT = methodType(void.class, int.class, double.class, long.class, float.class, byte.class,
-                    short.class, char.class);
             FunctionDescriptor baseFD = FunctionDescriptor.ofVoid(C_INT, C_DOUBLE, C_LONG_LONG, C_FLOAT, C_CHAR,
-                    C_SHORT, C_SHORT);
+                    C_SHORT, JAVA_CHAR);
             Object[] args = {1, 10D, 2L, 3F, (byte) 0, (short) 13, 'a'};
             for (int i = 0; i < args.length; i++) {
-                MemoryAddress ma = LOOKUP.lookup("invoke_high_arity" + i).get();
-                MethodType mt = baseMT.changeReturnType(baseMT.parameterType(i));
-                FunctionDescriptor fd = baseFD.withReturnLayout(baseFD.argumentLayouts().get(i));
+                MemorySegment ma = findNativeOrThrow("invoke_high_arity" + i);
+                FunctionDescriptor fd = baseFD.changeReturnLayout(baseFD.argumentLayouts().get(i));
                 Object expected = args[i];
-                tests.add(abi.downcallHandle(ma, mt, fd), expected, args);
-                tests.add(abi.downcallHandle(ma, mt, fd.withAttribute(TRIVIAL_ATTRIBUTE_NAME, true)), expected, args);
+                tests.add(abi.downcallHandle(ma, fd), expected, args);
             }
         }
 
