@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2020, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2020, 2022, Oracle and/or its affiliates. All rights reserved.
  *  DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  *  This code is free software; you can redistribute it and/or modify it
@@ -24,8 +24,8 @@
 
 /*
  * @test
- * @requires ((os.arch == "amd64" | os.arch == "x86_64") & sun.arch.data.model == "64") | os.arch == "aarch64"
- * @modules jdk.incubator.foreign/jdk.internal.foreign
+ * @enablePreview
+ * @requires ((os.arch == "amd64" | os.arch == "x86_64") & sun.arch.data.model == "64") | os.arch == "aarch64" | os.arch == "riscv64"
  *
  * @run testng/othervm/native
  *   --enable-native-access=ALL-UNNAMED
@@ -37,13 +37,12 @@
  *   TestUpcallStructScope
  */
 
-import jdk.incubator.foreign.CLinker;
-import jdk.incubator.foreign.FunctionDescriptor;
-import jdk.incubator.foreign.SymbolLookup;
-import jdk.incubator.foreign.MemoryAddress;
-import jdk.incubator.foreign.MemoryLayout;
-import jdk.incubator.foreign.MemorySegment;
-import jdk.incubator.foreign.ResourceScope;
+import java.lang.foreign.Arena;
+import java.lang.foreign.Linker;
+import java.lang.foreign.FunctionDescriptor;
+import java.lang.foreign.MemoryLayout;
+import java.lang.foreign.MemorySegment;
+
 import org.testng.annotations.Test;
 
 import java.lang.invoke.MethodHandle;
@@ -52,14 +51,11 @@ import java.lang.invoke.MethodType;
 import java.util.concurrent.atomic.AtomicReference;
 import java.util.function.Consumer;
 
-import static jdk.incubator.foreign.CLinker.C_DOUBLE;
-import static jdk.incubator.foreign.CLinker.C_INT;
-import static jdk.incubator.foreign.CLinker.C_POINTER;
 import static org.testng.Assert.assertFalse;
 
-public class TestUpcallStructScope {
+public class TestUpcallStructScope extends NativeTestHelper {
     static final MethodHandle MH_do_upcall;
-    static final CLinker LINKER = CLinker.getInstance();
+    static final Linker LINKER = Linker.nativeLinker();
     static final MethodHandle MH_Consumer_accept;
 
     // struct S_PDI { void* p0; double p1; int p2; };
@@ -71,11 +67,9 @@ public class TestUpcallStructScope {
 
     static {
         System.loadLibrary("TestUpcallStructScope");
-        SymbolLookup lookup = SymbolLookup.loaderLookup();
         MH_do_upcall = LINKER.downcallHandle(
-            lookup.lookup("do_upcall").get(),
-            MethodType.methodType(void.class, MemoryAddress.class, MemorySegment.class),
-            FunctionDescriptor.ofVoid(C_POINTER, S_PDI_LAYOUT)
+                findNativeOrThrow("do_upcall"),
+                FunctionDescriptor.ofVoid(C_POINTER, S_PDI_LAYOUT)
         );
 
         try {
@@ -95,10 +89,10 @@ public class TestUpcallStructScope {
         AtomicReference<MemorySegment> capturedSegment = new AtomicReference<>();
         MethodHandle target = methodHandle(capturedSegment::set);
         FunctionDescriptor upcallDesc = FunctionDescriptor.ofVoid(S_PDI_LAYOUT);
-        try (ResourceScope scope = ResourceScope.newConfinedScope()) {
-            MemoryAddress upcallStub = LINKER.upcallStub(target, upcallDesc, scope);
-            MemorySegment argSegment = MemorySegment.allocateNative(S_PDI_LAYOUT, scope);
-            MH_do_upcall.invokeExact(upcallStub.address(), argSegment);
+        try (Arena arena = Arena.openConfined()) {
+            MemorySegment upcallStub = LINKER.upcallStub(target, upcallDesc, arena.scope());
+            MemorySegment argSegment = MemorySegment.allocateNative(S_PDI_LAYOUT, arena.scope());;
+            MH_do_upcall.invoke(upcallStub, argSegment);
         }
 
         MemorySegment captured = capturedSegment.get();
