@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2021, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2021, 2022, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -21,31 +21,30 @@
  * questions.
  */
 
-import jdk.incubator.foreign.CLinker;
-import jdk.incubator.foreign.FunctionDescriptor;
-import jdk.incubator.foreign.MemoryAddress;
-import jdk.incubator.foreign.ResourceScope;
-import jdk.incubator.foreign.SymbolLookup;
+import java.lang.foreign.Arena;
+import java.lang.foreign.Linker;
+import java.lang.foreign.FunctionDescriptor;
+import java.lang.foreign.MemorySegment;
 
 import java.lang.invoke.MethodHandle;
 import java.lang.invoke.MethodHandles;
 import java.lang.invoke.MethodType;
-import java.security.Permission;
 
-import static jdk.incubator.foreign.CLinker.C_POINTER;
+public class ThrowingUpcall extends NativeTestHelper {
 
-public class ThrowingUpcall {
-
-    private static final MethodHandle downcall;
+    private static final MethodHandle downcallVoid;
+    private static final MethodHandle downcallNonVoid;
     public static final MethodHandle MH_throwException;
 
     static {
         System.loadLibrary("TestUpcall");
-        SymbolLookup lookup = SymbolLookup.loaderLookup();
-        downcall = CLinker.getInstance().downcallHandle(
-            lookup.lookup("f0_V__").orElseThrow(),
-            MethodType.methodType(void.class, MemoryAddress.class),
-            FunctionDescriptor.ofVoid(C_POINTER)
+        downcallVoid = Linker.nativeLinker().downcallHandle(
+            findNativeOrThrow("f0_V__"),
+                FunctionDescriptor.ofVoid(C_POINTER)
+        );
+        downcallNonVoid = Linker.nativeLinker().downcallHandle(
+                findNativeOrThrow("f10_I_I_"),
+                FunctionDescriptor.of(C_INT, C_INT, C_POINTER)
         );
 
         try {
@@ -61,18 +60,35 @@ public class ThrowingUpcall {
     }
 
     public static void main(String[] args) throws Throwable {
-        test();
+        if (args[0].equals("void")) {
+            testVoid();
+        } else {
+            testNonVoid();
+        }
     }
 
-    public static void test() throws Throwable {
+    public static void testVoid() throws Throwable {
         MethodHandle handle = MH_throwException;
         MethodHandle invoker = MethodHandles.exactInvoker(MethodType.methodType(void.class));
         handle = MethodHandles.insertArguments(invoker, 0, handle);
 
-        try (ResourceScope scope = ResourceScope.newConfinedScope()) {
-            MemoryAddress stub = CLinker.getInstance().upcallStub(handle, FunctionDescriptor.ofVoid(), scope);
+        try (Arena arena = Arena.openConfined()) {
+            MemorySegment stub = Linker.nativeLinker().upcallStub(handle, FunctionDescriptor.ofVoid(), arena.scope());
 
-            downcall.invokeExact(stub); // should call Shutdown.exit(1);
+            downcallVoid.invoke(stub); // should call Shutdown.exit(1);
+        }
+    }
+
+    public static void testNonVoid() throws Throwable {
+        MethodHandle handle = MethodHandles.identity(int.class);
+        handle = MethodHandles.collectArguments(handle, 0, MH_throwException);
+        MethodHandle invoker = MethodHandles.exactInvoker(MethodType.methodType(int.class, int.class));
+        handle = MethodHandles.insertArguments(invoker, 0, handle);
+
+        try (Arena arena = Arena.openConfined()) {
+            MemorySegment stub = Linker.nativeLinker().upcallStub(handle, FunctionDescriptor.of(C_INT, C_INT), arena.scope());
+
+            downcallNonVoid.invoke(42, stub); // should call Shutdown.exit(1);
         }
     }
 
