@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2003, 2016, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2003, 2022, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -361,5 +361,5 @@ public class VietnameseTest extends CollatorTest {
         }
     }
 
-    private final Collator myCollation = Collator.getInstance(new Locale("vi", "VN"));
+    private final Collator myCollation = Collator.getInstance(Locale.of("vi", "VN"));
 }
