@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2007, 2021, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2007, 2022, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -24,7 +24,7 @@
  * @test
  * @bug 4691089 4819436 4942982 5104960 6544471 6627549 7066203 7195759
  *      8039317 8074350 8074351 8145952 8187946 8193552 8202026 8204269
- *      8208746 8209775 8264792
+ *      8208746 8209775 8264792 8274658 8283277 8296239
  * @summary Validate ISO 4217 data for Currency class.
  * @modules java.base/java.util:open
  *          jdk.localedata
@@ -34,7 +34,7 @@
  * ############################################################################
  *
  *  ValidateISO4217 is a tool to detect differences between the latest ISO 4217
- *  data and and Java's currency data which is based on ISO 4217.
+ *  data and Java's currency data which is based on ISO 4217.
  *  If there is a difference, the following file which includes currency data
  *  may need to be updated.
  *      src/share/classes/java/util/CurrencyData.properties
@@ -97,11 +97,11 @@ public class ValidateISO4217 {
         {"XK", "EUR", "978", "2"},      // Kosovo
     };
 
-    /* Codes that are obsolete, do not have related country */
+    /* Codes that are obsolete, do not have related country, extra currency */
     static final String otherCodes =
         "ADP-AFA-ATS-AYM-AZM-BEF-BGL-BOV-BYB-BYR-CHE-CHW-CLF-COU-CUC-CYP-"
         + "DEM-EEK-ESP-FIM-FRF-GHC-GRD-GWP-IEP-ITL-LTL-LUF-LVL-MGF-MRO-MTL-MXV-MZM-NLG-"
-        + "PTE-ROL-RUR-SDD-SIT-SKK-SRG-STD-TMM-TPE-TRL-VEF-UYI-USN-USS-VEB-"
+        + "PTE-ROL-RUR-SDD-SIT-SLL-SKK-SRG-STD-TMM-TPE-TRL-VEF-UYI-USN-USS-VEB-VED-"
         + "XAG-XAU-XBA-XBB-XBC-XBD-XDR-XFO-XFU-XPD-XPT-XSU-XTS-XUA-XXX-"
         + "YUM-ZMK-ZWD-ZWN-ZWR";
 
@@ -199,7 +199,7 @@ public class ValidateISO4217 {
         }
         testCurrencyDefined(currencyCode, numericCode, digits);
 
-        Locale loc = new Locale("", country);
+        Locale loc = Locale.of("", country);
         try {
             Currency currency = Currency.getInstance(loc);
             if (!currency.getCurrencyCode().equals(currencyCode)) {
@@ -257,7 +257,7 @@ public class ValidateISO4217 {
                 if (codes[toIndex(country)] == UNDEFINED) {
                     ex = false;
                     try {
-                        Currency.getInstance(new Locale("", country));
+                        Currency.getInstance(Locale.of("", country));
                     }
                     catch (IllegalArgumentException e) {
                         ex = true;
@@ -270,7 +270,7 @@ public class ValidateISO4217 {
                 } else if (codes[toIndex(country)] == SKIPPED) {
                     Currency cur = null;
                     try {
-                        cur = Currency.getInstance(new Locale("", country));
+                        cur = Currency.getInstance(Locale.of("", country));
                     }
                     catch (Exception e) {
                         System.err.println("Error: " + e + ": Country=" +
