@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2007, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2007, 2022, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -33,7 +33,7 @@ public class Bug4316602 {
 
     public static void main(String[] args) throws Exception {
         String language = "ja";
-        Locale aLocale = new Locale(language);
+        Locale aLocale = Locale.of(language);
         if (aLocale.toString().equals(language)) {
             System.out.println("passed");
         } else {
