@@ -41,24 +41,22 @@
  *          while others also test implementation details.
  * @build *
  * @modules java.management
+ * @run junit/othervm/timeout=1000 JSR166TestCase
  * @run junit/othervm/timeout=1000 -Djava.security.manager=allow JSR166TestCase
  * @run junit/othervm/timeout=1000
  *      --add-opens java.base/java.util.concurrent=ALL-UNNAMED
  *      --add-opens java.base/java.lang=ALL-UNNAMED
- *      -Djava.security.manager=allow
  *      -Djsr166.testImplementationDetails=true
  *      JSR166TestCase
  * @run junit/othervm/timeout=1000
  *      --add-opens java.base/java.util.concurrent=ALL-UNNAMED
  *      --add-opens java.base/java.lang=ALL-UNNAMED
- *      -Djava.security.manager=allow
  *      -Djsr166.testImplementationDetails=true
  *      -Djava.util.concurrent.ForkJoinPool.common.parallelism=0
  *      JSR166TestCase
  * @run junit/othervm/timeout=1000
  *      --add-opens java.base/java.util.concurrent=ALL-UNNAMED
  *      --add-opens java.base/java.lang=ALL-UNNAMED
- *      -Djava.security.manager=allow
  *      -Djsr166.testImplementationDetails=true
  *      -Djava.util.concurrent.ForkJoinPool.common.parallelism=1
  *      -Djava.util.secureRandomSeed=true
@@ -225,8 +223,9 @@ import junit.framework.TestSuite;
  * </ul>
  */
 public class JSR166TestCase extends TestCase {
+    // No longer run with custom securityManagers
     private static final boolean useSecurityManager =
-        Boolean.getBoolean("jsr166.useSecurityManager");
+    Boolean.getBoolean("jsr166.useSecurityManager");
 
     protected static final boolean expensiveTests =
         Boolean.getBoolean("jsr166.expensiveTests");
@@ -288,7 +287,7 @@ public class JSR166TestCase extends TestCase {
      * May be initialized from any of:
      * - the "jsr166.delay.factor" system property
      * - the "test.timeout.factor" system property (as used by jtreg)
-     *   See: http://openjdk.java.net/jtreg/tag-spec.html
+     *   See: https://openjdk.org/jtreg/tag-spec.html
      * - hard-coded fuzz factor when using a known slowpoke VM
      */
     private static final float delayFactor = delayFactor();
@@ -437,11 +436,15 @@ public class JSR166TestCase extends TestCase {
      * Runs all unit tests in the given test suite.
      * Actual behavior influenced by jsr166.* system properties.
      */
+    @SuppressWarnings("removal")
     static void main(Test suite, String[] args) {
         if (useSecurityManager) {
             System.err.println("Setting a permissive security manager");
             Policy.setPolicy(permissivePolicy());
-            System.setSecurityManager(new SecurityManager());
+            try {
+                System.setSecurityManager(new SecurityManager());
+            } catch(Throwable ok) {  // failure OK during deprecation
+            }
         }
         for (int i = 0; i < suiteRuns; i++) {
             TestResult result = newPithyTestRunner().doRun(suite);
@@ -482,14 +485,18 @@ public class JSR166TestCase extends TestCase {
     public static final String JAVA_SPECIFICATION_VERSION;
     static {
         try {
-            JAVA_CLASS_VERSION = java.security.AccessController.doPrivileged(
+            @SuppressWarnings("removal") double jcv =
+            java.security.AccessController.doPrivileged(
                 new java.security.PrivilegedAction<Double>() {
                 public Double run() {
                     return Double.valueOf(System.getProperty("java.class.version"));}});
-            JAVA_SPECIFICATION_VERSION = java.security.AccessController.doPrivileged(
+            JAVA_CLASS_VERSION = jcv;
+            @SuppressWarnings("removal") String jsv =
+            java.security.AccessController.doPrivileged(
                 new java.security.PrivilegedAction<String>() {
                 public String run() {
                     return System.getProperty("java.specification.version");}});
+            JAVA_SPECIFICATION_VERSION = jsv;
         } catch (Throwable t) {
             throw new Error(t);
         }
@@ -506,7 +513,8 @@ public class JSR166TestCase extends TestCase {
     public static boolean atLeastJava14() { return JAVA_CLASS_VERSION >= 58.0; }
     public static boolean atLeastJava15() { return JAVA_CLASS_VERSION >= 59.0; }
     public static boolean atLeastJava16() { return JAVA_CLASS_VERSION >= 60.0; }
-    public static boolean atLeastJava17() { return JAVA_CLASS_VERSION >= 61.0; }
+    public static boolean atLeastJava19() { return JAVA_CLASS_VERSION >= 63.0; }
+    public static boolean atLeastJava20() { return JAVA_CLASS_VERSION >= 64.0; }
 
     /**
      * Collects all JSR166 unit tests as one suite.
@@ -624,6 +632,20 @@ public class JSR166TestCase extends TestCase {
                 "ForkJoinPool9Test",
             };
             addNamedTestClasses(suite, java9TestClassNames);
+        }
+
+        if (atLeastJava19()) {
+            String[] java19TestClassNames = {
+                "ForkJoinPool19Test",
+            };
+            addNamedTestClasses(suite, java19TestClassNames);
+        }
+
+        if (atLeastJava20()) {
+            String[] java20TestClassNames = {
+                "ForkJoinPool20Test",
+            };
+            addNamedTestClasses(suite, java20TestClassNames);
         }
 
         return suite;
@@ -756,7 +778,7 @@ public class JSR166TestCase extends TestCase {
      * Returns the shortest timed delay. This can be scaled up for
      * slow machines using the jsr166.delay.factor system property,
      * or via jtreg's -timeoutFactor: flag.
-     * http://openjdk.java.net/jtreg/command-help.html
+     * https://openjdk.org/jtreg/command-help.html
      */
     protected long getShortDelay() {
         return (long) (50 * delayFactor);
@@ -1084,7 +1106,7 @@ public class JSR166TestCase extends TestCase {
     void joinPool(ExecutorService pool) {
         try {
             pool.shutdown();
-            if (!pool.awaitTermination(2 * LONG_DELAY_MS, MILLISECONDS)) {
+            if (!pool.awaitTermination(20 * LONG_DELAY_MS, MILLISECONDS)) {
                 try {
                     threadFail("ExecutorService " + pool +
                                " did not terminate in a timely manner");
@@ -1168,6 +1190,7 @@ public class JSR166TestCase extends TestCase {
      * A debugging tool to print stack traces of most threads, as jstack does.
      * Uninteresting threads are filtered out.
      */
+    @SuppressWarnings("removal")
     static void dumpTestThreads() {
         SecurityManager sm = System.getSecurityManager();
         if (sm != null) {
@@ -1376,9 +1399,7 @@ public class JSR166TestCase extends TestCase {
         assertTrue(c.remove(i));
     }
     static void mustNotRemove(Collection<Item> c, int i) {
-        Item[] items = defaultItems;
-        Item x = (i >= 0 && i < items.length) ? items[i] : new Item(i);
-        assertFalse(c.remove(x));
+        assertFalse(c.remove(itemFor(i)));
     }
     static void mustNotRemove(Collection<Item> c, Item i) {
         assertFalse(c.remove(i));
@@ -1403,6 +1424,7 @@ public class JSR166TestCase extends TestCase {
      * security manager.  We require that any security manager permit
      * getPolicy/setPolicy.
      */
+    @SuppressWarnings("removal")
     public void runWithPermissions(Runnable r, Permission... permissions) {
         SecurityManager sm = System.getSecurityManager();
         if (sm == null) {
@@ -1418,8 +1440,10 @@ public class JSR166TestCase extends TestCase {
      * Runnable.  We require that any security manager permit
      * getPolicy/setPolicy.
      */
+    @SuppressWarnings("removal")
     public void runWithSecurityManagerWithPermissions(Runnable r,
                                                       Permission... permissions) {
+        if (!useSecurityManager) return;
         SecurityManager sm = System.getSecurityManager();
         if (sm == null) {
             Policy savedPolicy = Policy.getPolicy();
@@ -1427,9 +1451,13 @@ public class JSR166TestCase extends TestCase {
                 Policy.setPolicy(permissivePolicy());
                 System.setSecurityManager(new SecurityManager());
                 runWithSecurityManagerWithPermissions(r, permissions);
+            } catch (UnsupportedOperationException ok) {
             } finally {
-                System.setSecurityManager(null);
-                Policy.setPolicy(savedPolicy);
+                try {
+                    System.setSecurityManager(null);
+                    Policy.setPolicy(savedPolicy);
+                } catch (Exception ok) {
+                }
             }
         } else {
             Policy savedPolicy = Policy.getPolicy();
@@ -1456,6 +1484,7 @@ public class JSR166TestCase extends TestCase {
      * A security policy where new permissions can be dynamically added
      * or all cleared.
      */
+    @SuppressWarnings("removal")
     public static class AdjustablePolicy extends java.security.Policy {
         Permissions perms = new Permissions();
         AdjustablePolicy(Permission... permissions) {
@@ -1485,6 +1514,7 @@ public class JSR166TestCase extends TestCase {
     /**
      * Returns a policy containing all the permissions we ever need.
      */
+    @SuppressWarnings("removal")
     public static Policy permissivePolicy() {
         return new AdjustablePolicy
             // Permissions j.u.c. needs directly
