@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2016, 2020, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2016, 2022, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -23,7 +23,7 @@
 
 /**
  * @test
- * @bug 8262891 8268871 8274363
+ * @bug 8262891 8268871 8274363 8281100 8294670
  * @summary Check exhaustiveness of switches over sealed types.
  * @library /tools/lib
  * @modules jdk.compiler/com.sun.tools.javac.api
@@ -207,7 +207,7 @@ public class Exhaustiveness extends TestRunner {
                public class Test {
                    private int test(S obj) {
                        return switch (obj) {
-                           case A a && a.toString().isEmpty() -> 0;
+                           case A a when a.toString().isEmpty() -> 0;
                            case B b -> 1;
                        };
                    }
@@ -241,7 +241,7 @@ public class Exhaustiveness extends TestRunner {
                    private static final boolean TEST = true;
                    private int test(S obj) {
                        return switch (obj) {
-                           case A a && !(!(TEST)) -> 0;
+                           case A a when !(!(TEST)) -> 0;
                            case B b -> 1;
                        };
                    }
@@ -270,16 +270,17 @@ public class Exhaustiveness extends TestRunner {
                public class Test {
                    private int test(S obj) {
                        return switch (obj) {
-                           case A a && false -> 0;
+                           case A a when false -> 0;
                            case B b -> 1;
                        };
                    }
                }
                """,
+               "Test.java:6:27: compiler.err.guard.has.constant.expression.false",
                "Test.java:5:16: compiler.err.not.exhaustive",
                "- compiler.note.preview.filename: Test.java, DEFAULT",
                "- compiler.note.preview.recompile",
-               "1 error");
+               "2 errors");
     }
 
     @Test
@@ -370,102 +371,6 @@ public class Exhaustiveness extends TestRunner {
     }
 
     @Test
-    public void testInaccessiblePermitted(Path base) throws IOException {
-        Path current = base.resolve(".");
-        Path libSrc = current.resolve("lib-src");
-
-        tb.writeJavaFiles(libSrc,
-                           """
-                           package lib;
-                           public sealed interface S permits A, B {}
-                           """,
-                           """
-                           package lib;
-                           public final class A implements S {}
-                           """,
-                           """
-                           package lib;
-                           final class B implements S {}
-                           """);
-
-        Path libClasses = current.resolve("libClasses");
-
-        Files.createDirectories(libClasses);
-
-        new JavacTask(tb)
-                .options("--enable-preview",
-                         "-source", JAVA_VERSION)
-                .outdir(libClasses)
-                .files(tb.findJavaFiles(libSrc))
-                .run();
-
-        Path src = current.resolve("src");
-        tb.writeJavaFiles(src,
-                           """
-                           package test;
-                           import lib.*;
-                           public class Test {
-                               private int test(S obj) {
-                                   return switch (obj) {
-                                       case A a -> 0;
-                                   };
-                               }
-                           }
-                           """);
-
-        Path classes = current.resolve("libClasses");
-
-        Files.createDirectories(libClasses);
-
-        var log =
-                new JavacTask(tb)
-                    .options("--enable-preview",
-                             "-source", JAVA_VERSION,
-                             "-XDrawDiagnostics",
-                             "-Xlint:-preview",
-                             "--class-path", libClasses.toString())
-                    .outdir(classes)
-                    .files(tb.findJavaFiles(src))
-                    .run(Task.Expect.FAIL)
-                    .writeAll()
-                    .getOutputLines(Task.OutputKind.DIRECT);
-
-        List<String> expectedErrors = List.of(
-               "Test.java:5:16: compiler.err.not.exhaustive",
-               "- compiler.note.preview.filename: Test.java, DEFAULT",
-               "- compiler.note.preview.recompile",
-               "1 error");
-
-        if (!expectedErrors.equals(log)) {
-            throw new AssertionError("Incorrect errors, expected: " + expectedErrors +
-                                      ", actual: " + log);
-        }
-
-        Path bClass = libClasses.resolve("lib").resolve("B.class");
-
-        Files.delete(bClass);
-
-        var log2 =
-                new JavacTask(tb)
-                    .options("--enable-preview",
-                             "-source", JAVA_VERSION,
-                             "-XDrawDiagnostics",
-                             "-Xlint:-preview",
-                             "--class-path", libClasses.toString())
-                    .outdir(classes)
-                    .files(tb.findJavaFiles(src))
-                    .run(Task.Expect.FAIL)
-                    .writeAll()
-                    .getOutputLines(Task.OutputKind.DIRECT);
-
-        if (!expectedErrors.equals(log2)) {
-            throw new AssertionError("Incorrect errors, expected: " + expectedErrors +
-                                      ", actual: " + log2);
-        }
-
-    }
-
-    @Test
     public void testExhaustiveStatement1(Path base) throws Exception {
         doTest(base,
                new String[]{"""
@@ -497,7 +402,7 @@ public class Exhaustiveness extends TestRunner {
                    private void test(Object obj) {
                        switch (obj) {
                            case String s: return;
-                       };
+                       }
                    }
                }
                """,
@@ -627,7 +532,7 @@ public class Exhaustiveness extends TestRunner {
                    private int test(S obj, boolean b) {
                        return switch (obj) {
                            case A a -> 0;
-                           case C c && b -> 0;
+                           case C c when b -> 0;
                            case C c -> 0;
                            case D d -> 0;
                        };
@@ -667,7 +572,7 @@ public class Exhaustiveness extends TestRunner {
                        return switch (obj) {
                            case A a -> 0;
                            case C c -> 0;
-                           case D d && b -> 0;
+                           case D d when b -> 0;
                        };
                    }
                }
@@ -716,7 +621,7 @@ public class Exhaustiveness extends TestRunner {
                    private <T extends Base & S & Marker> int test(T obj, boolean b) {
                        return switch (obj) {
                            case A a -> 0;
-                           case C c && b -> 0;
+                           case C c when b -> 0;
                            case C c -> 0;
                            case D d -> 0;
                        };
@@ -764,7 +669,7 @@ public class Exhaustiveness extends TestRunner {
                        return switch (obj) {
                            case A a -> 0;
                            case C c -> 0;
-                           case D d && b -> 0;
+                           case D d when b -> 0;
                        };
                    }
                }
@@ -776,6 +681,105 @@ public class Exhaustiveness extends TestRunner {
     }
 
     @Test
+    public void testX(Path base) throws Exception {
+        doTest(base,
+               new String[]{"""
+                            package lib;
+                            public sealed interface S permits A, B {}
+                            """,
+                            """
+                            package lib;
+                            public final class A implements S {}
+                            """,
+                            """
+                            package lib;
+                            public final class B implements S {}
+                            """,
+                            """
+                            package lib;
+                            public record R(S a, S b) {}
+                            """},
+               """
+               package test;
+               import lib.*;
+               public class Test {
+                   private int test(R r) {
+                       return switch (r) {
+                           case R(A a, A b) -> 0;
+                           case R(A a, B b) -> 0;
+                           case R(B a, A b) -> 0;
+                           case R(B a, B b) -> 0;
+                       };
+                   }
+               }
+               """);
+        doTest(base,
+               new String[]{"""
+                            package lib;
+                            public sealed interface S permits A, B {}
+                            """,
+                            """
+                            package lib;
+                            public final class A implements S {}
+                            """,
+                            """
+                            package lib;
+                            public record B(Object o) implements S {}
+                            """,
+                            """
+                            package lib;
+                            public record R(S a, S b) {}
+                            """},
+               """
+               package test;
+               import lib.*;
+               public class Test {
+                   private int test(R r) {
+                       return switch (r) {
+                           case R(A a, A b) -> 0;
+                           case R(A a, B b) -> 0;
+                           case R(B a, A b) -> 0;
+                           case R(B a, B(String s)) -> 0;
+                       };
+                   }
+               }
+               """,
+               "Test.java:5:16: compiler.err.not.exhaustive",
+               "- compiler.note.preview.filename: Test.java, DEFAULT",
+               "- compiler.note.preview.recompile",
+               "1 error");
+        doTest(base,
+               new String[]{"""
+                            package lib;
+                            public sealed interface S permits A, B {}
+                            """,
+                            """
+                            package lib;
+                            public final class A implements S {}
+                            """,
+                            """
+                            package lib;
+                            public record B(Object o) implements S {}
+                            """,
+                            """
+                            package lib;
+                            public record R(S a, S b) {}
+                            """},
+               """
+               package test;
+               import lib.*;
+               public class Test {
+                   private int test(R r) {
+                       return switch (r) {
+                           case R(A a, A b) -> 0;
+                           case R(A a, B b) -> 0;
+                           case R(B a, A b) -> 0;
+                           case R(B a, B(var o)) -> 0;
+                       };
+                   }
+               }
+               """);
+    }
     public void testTransitiveSealed(Path base) throws Exception {
         doTest(base,
                new String[0],
@@ -794,6 +798,396 @@ public class Exhaustiveness extends TestRunner {
                            case B1 b1 -> 1;
                            case B2 b2 -> 2;
                        };
+                   }
+               }
+               """);
+    }
+
+    @Test
+    public void testOnlyApplicable(Path base) throws Exception {
+        record TestCase(String cases, String... errors) {}
+        TestCase[] subCases = new TestCase[] {
+            new TestCase("""
+                                     case C3<Integer> c -> {}
+                                     case C5<Integer, ?> c -> {}
+                                     case C6<?, Integer> c -> {}
+                         """), //OK
+            new TestCase("""
+                                     case C5<Integer, ?> c -> {}
+                                     case C6<?, Integer> c -> {}
+                         """,
+                         "Test.java:11:9: compiler.err.not.exhaustive.statement",
+                         "- compiler.note.preview.filename: Test.java, DEFAULT",
+                         "- compiler.note.preview.recompile",
+                         "1 error"),
+            new TestCase("""
+                                     case C3<Integer> c -> {}
+                                     case C6<?, Integer> c -> {}
+                         """,
+                         "Test.java:11:9: compiler.err.not.exhaustive.statement",
+                         "- compiler.note.preview.filename: Test.java, DEFAULT",
+                         "- compiler.note.preview.recompile",
+                         "1 error"),
+            new TestCase("""
+                                     case C3<Integer> c -> {}
+                                     case C5<Integer, ?> c -> {}
+                         """,
+                         "Test.java:11:9: compiler.err.not.exhaustive.statement",
+                         "- compiler.note.preview.filename: Test.java, DEFAULT",
+                         "- compiler.note.preview.recompile",
+                         "1 error"),
+            new TestCase("""
+                                     case C1 c -> {}
+                                     case C3<Integer> c -> {}
+                                     case C5<Integer, ?> c -> {}
+                                     case C6<?, Integer> c -> {}
+                         """,
+                         "Test.java:12:18: compiler.err.prob.found.req: (compiler.misc.inconvertible.types: test.Test.I<java.lang.Integer>, test.Test.C1)",
+                         "- compiler.note.preview.filename: Test.java, DEFAULT",
+                         "- compiler.note.preview.recompile",
+                         "1 error"),
+            new TestCase("""
+                                     case C2<?> c -> {}
+                                     case C3<Integer> c -> {}
+                                     case C5<Integer, ?> c -> {}
+                                     case C6<?, Integer> c -> {}
+                         """,
+                         "Test.java:12:18: compiler.err.prob.found.req: (compiler.misc.inconvertible.types: test.Test.I<java.lang.Integer>, test.Test.C2<?>)",
+                         "- compiler.note.preview.filename: Test.java, DEFAULT",
+                         "- compiler.note.preview.recompile",
+                         "1 error"),
+            new TestCase("""
+                                     case C4<?, ?> c -> {}
+                                     case C3<Integer> c -> {}
+                                     case C5<Integer, ?> c -> {}
+                                     case C6<?, Integer> c -> {}
+                         """,
+                         "Test.java:12:18: compiler.err.prob.found.req: (compiler.misc.inconvertible.types: test.Test.I<java.lang.Integer>, test.Test.C4<?,?>)",
+                         "- compiler.note.preview.filename: Test.java, DEFAULT",
+                         "- compiler.note.preview.recompile",
+                         "1 error"),
+        };
+        for (TestCase tc : subCases) {
+            doTest(base,
+                   new String[0],
+                   """
+                   package test;
+                   public class Test {
+                       sealed interface I<T> {}
+                       final class C1 implements I<String> {}
+                       final class C2<T> implements I<String> {}
+                       final class C3<T> implements I<T> {}
+                       final class C4<T, E> implements I<String> {}
+                       final class C5<T, E> implements I<T> {}
+                       final class C6<T, E> implements I<E> {}
+                       void t(I<Integer> i) {
+                           switch (i) {
+                   ${cases}
+                           }
+                       }
+                   }
+                   """.replace("${cases}", tc.cases),
+                   tc.errors);
+        }
+    }
+
+    @Test
+    public void testDefiniteAssignment(Path base) throws Exception {
+        doTest(base,
+               new String[]{"""
+                            package lib;
+                            public sealed interface S permits A, B {}
+                            """,
+                            """
+                            package lib;
+                            public final class A implements S {}
+                            """,
+                            """
+                            package lib;
+                            public final class B implements S {}
+                            """},
+               """
+               package test;
+               import lib.*;
+               public class Test {
+                   private void testStatement(S obj) {
+                       int data;
+                       switch (obj) {
+                           case A a -> data = 0;
+                           case B b -> data = 0;
+                       };
+                       System.err.println(data);
+                   }
+                   private void testExpression(S obj) {
+                       int data;
+                       int v = switch (obj) {
+                           case A a -> data = 0;
+                           case B b -> data = 0;
+                       };
+                       System.err.println(data);
+                   }
+                   private void testStatementNotExhaustive(S obj) {
+                       int data;
+                       switch (obj) {
+                           case A a -> data = 0;
+                       };
+                       System.err.println(data);
+                   }
+                   private void testExpressionNotExhaustive(S obj) {
+                       int data;
+                       int v = switch (obj) {
+                           case A a -> data = 0;
+                       };
+                       System.err.println(data);
+                   }
+                   private void testStatementErrorEnum(E e) { //"E" is intentionally unresolvable
+                       int data;
+                       switch (e) {
+                           case A -> data = 0;
+                           case B -> data = 0;
+                       };
+                       System.err.println(data);
+                   }
+                   private void testExpressionErrorEnum(E e) { //"E" is intentionally unresolvable
+                       int data;
+                       int v = switch (e) {
+                           case A -> data = 0;
+                           case B -> data = 0;
+                       };
+                       System.err.println(data);
+                   }
+               }
+               """,
+               "Test.java:34:41: compiler.err.cant.resolve.location: kindname.class, E, , , (compiler.misc.location: kindname.class, test.Test, null)",
+               "Test.java:42:42: compiler.err.cant.resolve.location: kindname.class, E, , , (compiler.misc.location: kindname.class, test.Test, null)",
+               "Test.java:22:9: compiler.err.not.exhaustive.statement",
+               "Test.java:29:17: compiler.err.not.exhaustive",
+               "- compiler.note.preview.filename: Test.java, DEFAULT",
+               "- compiler.note.preview.recompile",
+               "4 errors");
+    }
+
+    @Test
+    public void testSuperTypesInPattern(Path base) throws Exception {
+        doTest(base,
+               new String[]{"""
+                            package lib;
+                            public sealed interface S permits A, B {}
+                            """,
+                            """
+                            package lib;
+                            public final class A implements S {}
+                            """,
+                            """
+                            package lib;
+                            public final class B implements S {}
+                            """,
+                            """
+                            package lib;
+                            public record R(S a, S b) {}
+                            """},
+               """
+               package test;
+               import lib.*;
+               public class Test {
+                   private void testStatement(R obj) {
+                       switch (obj) {
+                           case R(A a, A b): break;
+                           case R(A a, B b): break;
+                           case R(B a, A b): break;
+                           case R(B a, B b): break;
+                       }
+                       switch (obj) {
+                           case R(S a, A b): break;
+                           case R(S a, B b): break;
+                       }
+                       switch (obj) {
+                           case R(Object a, A b): break;
+                           case R(Object a, B b): break;
+                       }
+                   }
+               }
+               """);
+    }
+
+    @Test
+    public void testNonPrimitiveBooleanGuard(Path base) throws Exception {
+        doTest(base,
+               new String[0],
+               """
+               package test;
+               public class Test {
+                   sealed interface A {}
+                   final class B1 implements A {}
+                   final class B2 implements A {}
+
+                   void test(A arg, Boolean g) {
+                       int i = switch (arg) {
+                           case B1 b1 when g -> 1;
+                           case B2 b2 -> 2;
+                       };
+                   }
+               }
+               """,
+               "Test.java:8:17: compiler.err.not.exhaustive",
+               "- compiler.note.preview.filename: Test.java, DEFAULT",
+               "- compiler.note.preview.recompile",
+               "1 error");
+        doTest(base,
+               new String[0],
+               """
+               package test;
+               public class Test {
+                   sealed interface A {}
+                   final class B1 implements A {}
+                   final class B2 implements A {}
+
+                   void test(A arg) {
+                       int i = switch (arg) {
+                           case B1 b1 when undefined() -> 1;
+                           case B2 b2 -> 2;
+                       };
+                   }
+               }
+               """,
+               "Test.java:9:29: compiler.err.cant.resolve.location.args: kindname.method, undefined, , , (compiler.misc.location: kindname.class, test.Test, null)",
+               "Test.java:8:17: compiler.err.not.exhaustive",
+               "- compiler.note.preview.filename: Test.java, DEFAULT",
+               "- compiler.note.preview.recompile",
+               "2 errors");
+    }
+
+    @Test //JDK-8294670
+    public void testImplicitDefaultCannotCompleteNormally(Path base) throws Exception {
+        doTest(base,
+               new String[0],
+               """
+               package test;
+               public class Test {
+                   sealed interface A {}
+                   final class B implements A {}
+
+                   int test(A arg) {
+                       switch (arg) {
+                           case B b: return 1;
+                       }
+                   }
+               }
+               """);
+        doTest(base,
+               new String[0],
+               """
+               package test;
+               public class Test {
+                   sealed interface A {}
+                   final class B implements A {}
+
+                   int test(A arg) {
+                       switch (arg) {
+                           case B b: return 1;
+                           default: return 1;
+                       }
+                   }
+               }
+               """);
+        doTest(base,
+               new String[0],
+               """
+               package test;
+               public class Test {
+                   sealed interface A {}
+                   final class B implements A {}
+
+                   int test(A arg) {
+                       switch (arg) {
+                           case B b: break;
+                       }
+                   }
+               }
+               """,
+               "Test.java:10:5: compiler.err.missing.ret.stmt",
+               "- compiler.note.preview.filename: Test.java, DEFAULT",
+               "- compiler.note.preview.recompile",
+               "1 error");
+        doTest(base,
+               new String[0],
+               """
+               package test;
+               public class Test {
+                   sealed interface A {}
+                   final class B implements A {}
+
+                   int test(A arg) {
+                       switch (arg) {
+                           case B b: return 1;
+                           default: break;
+                       }
+                   }
+               }
+               """,
+               "Test.java:11:5: compiler.err.missing.ret.stmt",
+               "- compiler.note.preview.filename: Test.java, DEFAULT",
+               "- compiler.note.preview.recompile",
+               "1 error");
+        doTest(base,
+               new String[0],
+               """
+               package test;
+               public class Test {
+                   sealed interface A {}
+                   final class B implements A {}
+
+                   int test(A arg) {
+                       switch (arg) {
+                           case B b:
+                       }
+                   }
+               }
+               """,
+               "Test.java:10:5: compiler.err.missing.ret.stmt",
+               "- compiler.note.preview.filename: Test.java, DEFAULT",
+               "- compiler.note.preview.recompile",
+               "1 error");
+        doTest(base,
+               new String[0],
+               """
+               package test;
+               public class Test {
+                   sealed interface A {}
+                   final class B implements A {}
+
+                   int test(A arg) {
+                       switch (arg) {
+                           case B b: return 1;
+                           default:
+                       }
+                   }
+               }
+               """,
+               "Test.java:11:5: compiler.err.missing.ret.stmt",
+               "- compiler.note.preview.filename: Test.java, DEFAULT",
+               "- compiler.note.preview.recompile",
+               "1 error");
+    }
+
+    @Test
+    public void testInferenceExhaustive(Path base) throws Exception {
+        doTest(base,
+               new String[0],
+               """
+               package test;
+               public class Test {
+                   sealed interface Opt<T> {}
+                   record Some<T>(T t) implements Opt<T> {}
+                   final class None<T> implements Opt<T> {}
+
+                   void test(Opt<String> optValue) {
+                       switch (optValue) {
+                           case Some<String>(String s) ->
+                               System.out.printf("got string: %s%n", s);
+                           case None<String> none ->
+                               System.out.println("got none");
+                       }
                    }
                }
                """);
@@ -833,7 +1227,8 @@ public class Exhaustiveness extends TestRunner {
                              "-source", JAVA_VERSION,
                              "-XDrawDiagnostics",
                              "-Xlint:-preview",
-                             "--class-path", libClasses.toString())
+                             "--class-path", libClasses.toString(),
+                             "-XDshould-stop.at=FLOW")
                     .outdir(classes)
                     .files(tb.findJavaFiles(src))
                     .run(expectedErrors.length > 0 ? Task.Expect.FAIL : Task.Expect.SUCCESS)
